event-opcode/tests/ui/fail_bad_suffix.rs
use event_opcode::EventOpCode;
#[derive(EventOpCode)]
pub struct TestEventWrong;
fn main() {}
